--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,10 +1,23 @@
-<h1>Tickets#index</h1>
-<p>Find me in app/views/tickets/index.html.erb</p>
-<% @tickets.each do |t| %>
-  <%= t.title %>
-  <%= t.body %>
-  <%= t.is_completed %>
-  <%= t.due_date %>
-<% end%>
+<h1>タスク一覧</h1>
+
+<table>
+  <tr>
+    <th>完了</th>
+    <th>タイトル</th>
+    <th>詳細</th>
+    <th>締切日</th>
+  </tr>
+
+  <% @tickets.each do |t| %>
+    <tr>
+      <td>
+        <%= check_box nil, nil, { checked: t.is_completed , readonly: true }, true, false %>
+      </td>
+      <td><%= t.title %></td>
+      <td><%= t.body %></td>
+      <td><%= t.due_date %></td>
+    </tr>
+  <% end%>
+</table>
 
 <%= link_to '新規登録', new_ticket_path, class: 'btn btn-primary' %>
