--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,11 +1,11 @@
-<h1>タスク一覧</h1>
+<h1><%= Ticket.model_name.human%>一覧</h1>
 
 <table>
   <tr>
-    <th>完了</th>
-    <th>タイトル</th>
-    <th>詳細</th>
-    <th>締切日</th>
+    <th><%= Ticket.human_attribute_name('is_completed')%></th>
+    <th><%= Ticket.human_attribute_name('title')%></th>
+    <th><%= Ticket.human_attribute_name('body')%></th>
+    <th><%= Ticket.human_attribute_name('due_date')%></th>
   </tr>
 
   <% @tickets.each do |t| %>
