--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -10,7 +10,7 @@
   </div>
   <div class="form-group">
     <%= f.label :body %>
-    <%= f.text_field :body, row: 3, class: 'form-control', id: 'task_body' %>
+    <%= f.text_area :body, class: 'form-control', id: 'task_body' %>
   </div>
   <%= f.submit nil, class: 'btn btn-primary' %>
 <% end %>
