js から api を post で叩いて完了状態を更新 #13

--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -14,7 +14,10 @@
   <% @tickets.each do |t| %>
     <tr>
       <td>
-        <%= check_box nil, nil, { checked: t.is_completed }, true, false %>
+        <input type="checkbox"
+               id="<%= t.id %>"
+               <%= 'checked="ckecked"' if t.is_completed %>
+               onclick="completionStatus(event, <%= t.id %>)">
       </td>
       <td><%= t.title %></td>
       <td><%= t.body %></td>
