--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -30,3 +30,4 @@
 </table>
 
 <%= link_to '新規登録', new_ticket_path, class: 'btn btn-primary' %>
+<%= link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete }, class: 'btn' %>
