ログイン中のユーザー名を表示 #10

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,10 @@
   </head>
 
   <body>
+    <% if user_signed_in? %>
+      <%= "user: #{current_user.full_name}" %>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
