ログインボタンを設置 #10

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
   <body>
     <% if user_signed_in? %>
       <%= "user: #{current_user.full_name}" %>
+    <% else %>
+      <%= link_to 'ログイン', new_user_session_path, class: 'btn' %>
     <% end %>
 
     <%= yield %>
