サインインボタンを設置 #10

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
       <%= "user: #{current_user.full_name}" %>
     <% else %>
       <%= link_to 'ログイン', new_user_session_path, class: 'btn' %>
+      <%= link_to 'サインイン', new_user_registration_path, class: 'btn' %>
     <% end %>
 
     <%= yield %>
