--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
     <% if user_signed_in? %>
       <%= "user: #{current_user.full_name}" %>
     <% else %>
-      <%= link_to 'ログイン', new_user_session_path, class: 'btn' %>
-      <%= link_to 'サインイン', new_user_registration_path, class: 'btn' %>
+      <%= link_to 'ログイン', new_user_session_path, class: 'btn btn-secondary' %>
+      <%= link_to 'サインイン', new_user_registration_path, class: 'btn btn-secondary' %>
     <% end %>
 
     <%= yield %>
